<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/go_slide"
        android:layout_above="@+id/start_slide"
        android:layout_alignLeft="@+id/start_slide"
        android:layout_alignStart="@+id/start_slide"
        android:background="@drawable/go"
        tools:text="@string/go_slide"
        android:text="@string/go_slide"
        android:visibility="visible"
        android:textColor="#00000000"/>

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/next_slide"
        android:background="@drawable/next"
        android:text="@string/next"
        tools:text="@string/next"
        android:textColor="#00000000"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/currentpageNO"
        android:layout_toRightOf="@+id/totalpageNO"
        android:layout_toEndOf="@+id/totalpageNO" />

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/start_slide"
        android:background="@drawable/play"
        tools:text="@string/start"
        android:text="@string/start"
        android:textColor="#00000000"
        android:layout_above="@+id/currentpageNO"
        android:layout_alignLeft="@+id/pause_slide"
        android:layout_alignStart="@+id/pause_slide" />

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/pause_slide"
        android:background="@drawable/stop"
        android:visibility="visible"
        tools:text="@string/pause"
        android:text="@string/pause"
        android:textColor="#00000000"
        android:layout_below="@+id/totalpageNO"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/currentpageNO"
        android:id="@+id/currentpageNO"
        tools:text="@string/currentpageNO"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/previous_slide"
        android:background="@drawable/back"
        android:text="@string/previous"
        tools:text="@string/previous"
        android:visibility="visible"
        android:textColor="#00000000"
        android:layout_above="@+id/totalpageNO"
        android:layout_toLeftOf="@+id/totalpageNO"
        android:layout_toStartOf="@+id/totalpageNO" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/totalpageNo"
        android:id="@+id/totalpageNO"
        tools:text="@string/totalpageNo"
        android:layout_below="@+id/next_slide"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/slide_No"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_above="@+id/go_slide"
        android:layout_alignLeft="@+id/go_slide"
        android:layout_alignStart="@+id/go_slide"
        android:layout_toLeftOf="@+id/next_slide"
        android:layout_toStartOf="@+id/next_slide" />

</RelativeLayout>